# sdlc-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_code_agent.py  wordcount.py
.ai/: issue-100.md  issue-102.md  issue-104.md  issue-11.md  issue-114.md  issue-117.md  issue-119.md  issue-121.md  issue-123.md  issue-125.md  issue-127.md  issue-129.md  issue-13.md  issue-133.md  issue-141.md  issue-143.md  issue-149.md  issue-15.md  issue-151.md  issue-17.md  issue-19.md  issue-2.md  issue-21.md  issue-23.md  issue-25.md  issue-27.md  issue-29.md  issue-3.md  issue-31.md  issue-33.md  issue-35.md  issue-37.md  issue-39.md  issue-41.md  issue-43.md  issue-45.md  issue-47.md  issue-49.md  issue-51.md  issue-53.md  (+22 more)
agents/: llm_client.py
app/: main.py
coding_agents_sdlc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
core/: __init__.py  models.py  state.py
docker/: entrypoint.sh
legacy/: run_code_agent.py
nodes/: __init__.py  developer.py  planner.py  reviewer.py
prompts/: __init__.py  developer_prompt.py  planner_prompt.py  registry.py  reviewer_prompt.py
services/: __init__.py  ai_artifacts_service.py  code_context_service.py  file_service.py  git_service.py  github_issue_service.py  github_service.py  llm_service.py  sdlc_config_service.py
src/: __init__.py  csvstats.py  envcheck.py  inimerge.py  logsummary.py  normalize.py  reverse.py  wordcount.py
tests/: test_csvstats.py  test_envcheck.py  test_inimerge.py  test_logsummary.py  test_normalize.py  test_reverse.py  test_reverse_cli.py  test_reviewer_smoke.py  (+3 more)
(+28 files in other folders)
