[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agents-sdlc"
version = "0.1.0"
description = "Automated SDLC with Code Agent and AI Reviewer"
requires-python = ">=3.11"

dependencies = [
    "PyGithub>=2.3.0",
    "GitPython>=3.1.40",
    "requests>=2.31.0"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]